fix(图表): 修复组合图指标累加无效或者导致图表异常的问题